[package]
authors = ["The Rust Project Developers"]
name = "cargo-callgraph"
version = "0.0.0"
edition = "2018"

[[bin]]
path = "src/librustdoc/lib.rs"
name = "cargo-callgraph"

[dependencies]
arrayvec = { version = "0.5.1", default-features = false }
pulldown-cmark = { version = "0.8", default-features = false }
minifier = "0.0.33"
rayon = { version = "0.3.0", package = "rustc-rayon" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.6.1"
tempfile = "3"
itertools = "0.9"
regex = "1"
rustdoc-json-types = { path = "src/rustdoc-json-types" }
bit-vec = "0.6.2"
dot = "0.1.4"
html-escape = "0.2.6"

[dev-dependencies]
expect-test = "1.0"
